--- a/packages/nextjs/.eslintrc.json
+++ b/packages/nextjs/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
   "rules": {
+    "@typescript-eslint/no-unused-vars": "off",
+    "@next/next/no-img-element": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "react/no-unescaped-entities": "off",
