--- a/packages/nextjs/.eslintrc.json
+++ b/packages/nextjs/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
   "rules": {
+    "react-hooks/exhaustive-deps": 0,
     "@typescript-eslint/no-unused-vars": "off",
     "@next/next/no-img-element": "off",
     "@typescript-eslint/no-explicit-any": "off",
